[gd_scene load_steps=12 format=3 uid="uid://cwmy3fpfix05v"]

[ext_resource type="Script" uid="uid://cbbor56vu71ns" path="res://Classes/jogo.gd" id="1_sq8yp"]
[ext_resource type="Texture2D" uid="uid://brb7xk3p5p8d2" path="res://art/tabuleiro monopoly oficial.jpg" id="2_0c0ry"]
[ext_resource type="PackedScene" uid="uid://cle06fmrhrvks" path="res://scenes/Box/Comprarbox.tscn" id="3_drirx"]
[ext_resource type="PackedScene" uid="uid://be5yp650m3a1b" path="res://scenes/Box/PrisaoBox.tscn" id="3_gsaar"]
[ext_resource type="PackedScene" uid="uid://do18u77xw150c" path="res://scenes/dado/dado.tscn" id="4_k05ng"]
[ext_resource type="PackedScene" uid="uid://gth1xi13d2ga" path="res://scenes/Box/AluguelBox.tscn" id="4_r5l4e"]
[ext_resource type="PackedScene" uid="uid://xprvsrvffc6y" path="res://scenes/Aprimorar/aprimorar.tscn" id="5_r5l4e"]
[ext_resource type="Script" uid="uid://dilrp2pxs227a" path="res://Classes/Tabuleiro.gd" id="6_4sjka"]
[ext_resource type="Script" uid="uid://c6uqflxavcxch" path="res://Classes/Espaco.gd" id="7_ogo8m"]
[ext_resource type="Theme" uid="uid://bkfdl8u4ommu1" path="res://art/DefaultTheme.tres" id="10_drirx"]

[sub_resource type="GDScript" id="GDScript_1b3iq"]

[node name="Jogo" type="Node2D"]
script = ExtResource("1_sq8yp")
boxs = Array[PackedScene]([ExtResource("3_drirx"), ExtResource("3_gsaar"), ExtResource("4_r5l4e")])

[node name="Aprimorar" parent="." instance=ExtResource("5_r5l4e")]

[node name="Tabuleiro" type="Node" parent="." node_paths=PackedStringArray("espacos")]
script = ExtResource("6_4sjka")
espacos = [NodePath("Casa0"), NodePath("Casa1"), NodePath("Casa2"), NodePath("Casa3"), NodePath("Casa4"), NodePath("Casa5"), NodePath("Casa6"), NodePath("Casa7"), NodePath("Casa8"), NodePath("Casa9"), NodePath("Casa10"), NodePath("Casa11"), NodePath("Casa12"), NodePath("Casa13"), NodePath("Casa14"), NodePath("Casa15"), NodePath("Casa16"), NodePath("Casa17"), NodePath("Casa18"), NodePath("Casa19"), NodePath("Casa20"), NodePath("Casa21"), NodePath("Casa22"), NodePath("Casa23"), NodePath("Casa24"), NodePath("Casa25"), NodePath("Casa26"), NodePath("Casa27"), NodePath("Casa28"), NodePath("Casa29"), NodePath("Casa30"), NodePath("Casa31"), NodePath("Casa32"), NodePath("Casa33"), NodePath("Casa34"), NodePath("Casa35"), NodePath("Casa36"), NodePath("Casa37"), NodePath("Casa38"), NodePath("Casa39")]

[node name="Tabuleiro7" type="Sprite2D" parent="Tabuleiro"]
position = Vector2(872, 536)
scale = Vector2(1.12756, 0.953004)
texture = ExtResource("2_0c0ry")

[node name="Casa0" type="Marker2D" parent="Tabuleiro"]
position = Vector2(1552, 984)
script = ExtResource("7_ogo8m")
tipo = 8
metadata/_custom_type_script = "uid://c6uqflxavcxch"

[node name="Casa1" type="Marker2D" parent="Tabuleiro"]
position = Vector2(1384, 1000)
script = ExtResource("7_ogo8m")
posicao = 1

[node name="Casa2" type="Marker2D" parent="Tabuleiro"]
position = Vector2(1248, 992)
script = ExtResource("7_ogo8m")
posicao = 2
tipo = 8

[node name="Casa3" type="Marker2D" parent="Tabuleiro"]
position = Vector2(1120, 1000)
script = ExtResource("7_ogo8m")
posicao = 3

[node name="Casa4" type="Marker2D" parent="Tabuleiro"]
position = Vector2(992, 1008)
script = ExtResource("7_ogo8m")
posicao = 4
tipo = 8

[node name="Casa5" type="Marker2D" parent="Tabuleiro"]
position = Vector2(864, 992)
script = ExtResource("7_ogo8m")
posicao = 5
tipo = 2

[node name="Casa6" type="Marker2D" parent="Tabuleiro"]
position = Vector2(720, 1000)
script = ExtResource("7_ogo8m")
posicao = 6

[node name="Casa7" type="Marker2D" parent="Tabuleiro"]
position = Vector2(600, 992)
script = ExtResource("7_ogo8m")
posicao = 7
tipo = 8

[node name="Casa8" type="Marker2D" parent="Tabuleiro"]
position = Vector2(464, 992)
script = ExtResource("7_ogo8m")
posicao = 8

[node name="Casa9" type="Marker2D" parent="Tabuleiro"]
position = Vector2(328, 992)
script = ExtResource("7_ogo8m")
posicao = 9

[node name="Casa10" type="Marker2D" parent="Tabuleiro"]
position = Vector2(184, 984)
script = ExtResource("7_ogo8m")
posicao = 10
tipo = 8

[node name="Casa11" type="Marker2D" parent="Tabuleiro"]
position = Vector2(160, 864)
script = ExtResource("7_ogo8m")
posicao = 11
metadata/_custom_type_script = "uid://c6uqflxavcxch"

[node name="Casa12" type="Marker2D" parent="Tabuleiro"]
position = Vector2(160, 800)
script = ExtResource("7_ogo8m")
posicao = 12
tipo = 3

[node name="Casa13" type="Marker2D" parent="Tabuleiro"]
position = Vector2(160, 704)
script = ExtResource("7_ogo8m")
posicao = 13

[node name="Casa14" type="Marker2D" parent="Tabuleiro"]
position = Vector2(160, 616)
script = ExtResource("7_ogo8m")
posicao = 14

[node name="Casa15" type="Marker2D" parent="Tabuleiro"]
position = Vector2(168, 528)
script = ExtResource("7_ogo8m")
posicao = 15
tipo = 2

[node name="Casa16" type="Marker2D" parent="Tabuleiro"]
position = Vector2(168, 440)
script = ExtResource("7_ogo8m")
posicao = 16

[node name="Casa17" type="Marker2D" parent="Tabuleiro"]
position = Vector2(176, 368)
script = ExtResource("7_ogo8m")
posicao = 17
tipo = 7

[node name="Casa18" type="Marker2D" parent="Tabuleiro"]
position = Vector2(176, 264)
script = ExtResource("7_ogo8m")
posicao = 18

[node name="Casa19" type="Marker2D" parent="Tabuleiro"]
position = Vector2(184, 192)
script = ExtResource("7_ogo8m")
posicao = 19

[node name="Casa20" type="Marker2D" parent="Tabuleiro"]
position = Vector2(176, 88)
script = ExtResource("7_ogo8m")
posicao = 20
tipo = 8

[node name="Casa21" type="Marker2D" parent="Tabuleiro"]
position = Vector2(360, 72)
script = ExtResource("7_ogo8m")
posicao = 21

[node name="Casa22" type="Marker2D" parent="Tabuleiro"]
position = Vector2(480, 80)
script = ExtResource("7_ogo8m")
posicao = 22
tipo = 6

[node name="Casa23" type="Marker2D" parent="Tabuleiro"]
position = Vector2(616, 72)
script = ExtResource("7_ogo8m")
posicao = 23

[node name="Casa24" type="Marker2D" parent="Tabuleiro"]
position = Vector2(744, 72)
script = ExtResource("7_ogo8m")
posicao = 24

[node name="Casa25" type="Marker2D" parent="Tabuleiro"]
position = Vector2(872, 72)
script = ExtResource("7_ogo8m")
posicao = 25
tipo = 2

[node name="Casa26" type="Marker2D" parent="Tabuleiro"]
position = Vector2(1000, 72)
script = ExtResource("7_ogo8m")
posicao = 26

[node name="Casa27" type="Marker2D" parent="Tabuleiro"]
position = Vector2(1128, 72)
script = ExtResource("7_ogo8m")
posicao = 27

[node name="Casa28" type="Marker2D" parent="Tabuleiro"]
position = Vector2(1256, 80)
script = ExtResource("7_ogo8m")
posicao = 28
tipo = 3

[node name="Casa29" type="Marker2D" parent="Tabuleiro"]
position = Vector2(1392, 72)
script = ExtResource("7_ogo8m")
posicao = 29

[node name="Casa30" type="Marker2D" parent="Tabuleiro"]
position = Vector2(1560, 80)
script = ExtResource("7_ogo8m")
posicao = 30
tipo = 9

[node name="Casa31" type="Marker2D" parent="Tabuleiro"]
position = Vector2(1568, 200)
script = ExtResource("7_ogo8m")
posicao = 31

[node name="Casa32" type="Marker2D" parent="Tabuleiro"]
position = Vector2(1576, 272)
script = ExtResource("7_ogo8m")
posicao = 32

[node name="Casa33" type="Marker2D" parent="Tabuleiro"]
position = Vector2(1560, 368)
script = ExtResource("7_ogo8m")
posicao = 33
tipo = 7

[node name="Casa34" type="Marker2D" parent="Tabuleiro"]
position = Vector2(1568, 440)
script = ExtResource("7_ogo8m")
posicao = 34
tipo = 8

[node name="Casa35" type="Marker2D" parent="Tabuleiro"]
position = Vector2(1576, 536)
script = ExtResource("7_ogo8m")
posicao = 35
tipo = 8

[node name="Casa36" type="Marker2D" parent="Tabuleiro"]
position = Vector2(1576, 624)
script = ExtResource("7_ogo8m")
posicao = 36
tipo = 6

[node name="Casa37" type="Marker2D" parent="Tabuleiro"]
position = Vector2(1568, 704)
script = ExtResource("7_ogo8m")
posicao = 37

[node name="Casa38" type="Marker2D" parent="Tabuleiro"]
position = Vector2(1568, 784)
script = ExtResource("7_ogo8m")
posicao = 38
tipo = 5

[node name="Casa39" type="Marker2D" parent="Tabuleiro"]
position = Vector2(1576, 872)
script = ExtResource("7_ogo8m")
posicao = 39

[node name="Dado" parent="." instance=ExtResource("4_k05ng")]
z_index = 2
position = Vector2(1592, 152)

[node name="Dado2" parent="." instance=ExtResource("4_k05ng")]
z_index = 3
position = Vector2(1704, 152)

[node name="Timer" type="Timer" parent="."]
script = SubResource("GDScript_1b3iq")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Turno" type="Label" parent="CanvasLayer"]
offset_left = 1672.0
offset_top = 48.0
offset_right = 1800.0
offset_bottom = 112.0
theme = ExtResource("10_drirx")
text = "Turno: "

[node name="Propriedades" type="Button" parent="CanvasLayer"]
offset_left = 1760.0
offset_top = 1008.0
offset_right = 1911.0
offset_bottom = 1050.0
theme = ExtResource("10_drirx")
text = "Propriedades"

[node name="Cartas" type="Button" parent="CanvasLayer"]
offset_left = 1760.0
offset_top = 968.0
offset_right = 1911.0
offset_bottom = 1010.0
theme = ExtResource("10_drirx")
text = "Cartas
"

[connection signal="dado_foi_rolado" from="Dado" to="." method="get_resultado1"]
[connection signal="dado_foi_rolado" from="Dado2" to="." method="get_resultado2"]
[connection signal="pressed" from="CanvasLayer/Propriedades" to="." method="_on_propriedades_pressed"]
[connection signal="pressed" from="CanvasLayer/Cartas" to="." method="_on_cartas_pressed"]
